--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
   repositories {
+    maven { url 'https://maven.google.com' }
     mavenCentral()
     jcenter()
   }
@@ -11,6 +12,7 @@ buildscript {
 
 allprojects {
   repositories {
+    maven { url 'https://maven.google.com' }
     mavenCentral()
     jcenter()
   }
