--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.3'
-    classpath 'me.tatarka:gradle-retrolambda:3.3.0'
+    classpath 'com.android.tools.build:gradle:3.0.0'
   }
 }
 
@@ -30,7 +29,8 @@ ext {
 
 ext.deps = [
     jsr250: 'javax.annotation:jsr250-api:1.0',
-    auto: 'com.google.auto.value:auto-value:1.3',
+    auto: 'com.google.auto.value:auto-value:1.6.6',
+    autoAnnotations: 'com.google.auto.value:auto-value-annotations:1.6.6',
     annotations: 'com.android.support:support-annotations:28.0.0',
     rxjava: 'io.reactivex.rxjava2:rxjava:2.0.3',
     rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
