--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
   repositories {
-    maven { url 'https://maven.google.com' }
+    google()
     mavenCentral()
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.0.0'
+    classpath 'com.android.tools.build:gradle:3.2.0'
   }
 }
 
 allprojects {
   repositories {
-    maven { url 'https://maven.google.com' }
+    google()
     mavenCentral()
     jcenter()
   }
