AndroidX 1.0.0, AutoValue 1.7, RxLifecycle 3.1, Butterknife 10.2

--- a/rx-receivers-sample/build.gradle
+++ b/rx-receivers-sample/build.gradle
@@ -28,6 +28,7 @@ dependencies {
   implementation project(':rx-receivers')
   implementation deps.rxandroid
   implementation deps.butterknife
+  annotationProcessor deps.butterknifeProcessor
   implementation deps.rxlifecycle
   implementation deps.rxlifecycleandroid
   implementation deps.rxlifecyclecomponents
