--- a/build.gradle
+++ b/build.gradle
@@ -29,16 +29,17 @@ ext {
 
 ext.deps = [
     jsr250: 'javax.annotation:jsr250-api:1.0',
-    auto: 'com.google.auto.value:auto-value:1.6.6',
-    autoAnnotations: 'com.google.auto.value:auto-value-annotations:1.6.6',
-    annotations: 'com.android.support:support-annotations:28.0.0',
+    auto: 'com.google.auto.value:auto-value:1.7',
+    autoAnnotations: 'com.google.auto.value:auto-value-annotations:1.7',
+    annotations: 'androidx.annotation:annotation:1.0.0',
     rxjava: 'io.reactivex.rxjava2:rxjava:2.0.3',
     rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.1',
-    butterknife: 'com.jakewharton:butterknife:8.8.0',
+    butterknife: 'com.jakewharton:butterknife:10.2.0',
+    butterknifeProcessor: 'com.jakewharton:butterknife-compiler:10.2.0',
     junit: 'junit:junit:4.12',
     assertj: 'org.assertj:assertj-core:1.7.0',
-    robolectric: 'org.robolectric:robolectric:3.8',
-    rxlifecycle: 'com.trello.rxlifecycle2:rxlifecycle:2.2.2',
-    rxlifecycleandroid: 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.2',
-    rxlifecyclecomponents: 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2',
+    robolectric: 'org.robolectric:robolectric:4.3',
+    rxlifecycle: 'com.trello.rxlifecycle3:rxlifecycle:3.1.0',
+    rxlifecycleandroid: 'com.trello.rxlifecycle3:rxlifecycle-android:3.1.0',
+    rxlifecyclecomponents: 'com.trello.rxlifecycle3:rxlifecycle-components:3.1.0',
 ]
